<resources>
    <string name="app_name">ByAudio</string>
    <string name="audio_app">ByAudio</string>
    <string name="splash_text">seamless experience</string>
    <string name="bnav_discovery">Discovery</string>
    <string name="bnav_player">Player</string>
    <string name="bnav_queue">Queue</string>
    <string name="bnav_search">Search</string>
    <string name="bnav_playlist">Playlist</string>
    <string name="text_test_audio_time">5:10:00</string>
    <string name="text_default_song_name">Song Name Place Holder</string>
    <string name="text_default_artist_name">ByAudio</string>
    <string name="button_song_detail_description">Info</string>
    <string name="slider_description">slider</string>
    <string name="imageView_albumCover_description">No Album Cover</string>
    <string name="button_player_controller_description">media player controller</string>
    <string name="repeat_button_description">repeat setting button</string>
</resources>