<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_cat"
        app:tint="@color/mint"
        android:contentDescription="@string/imageView_albumCover_description"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/albumCover"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/text_default_song_name" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintLeft_toLeftOf="@id/songName"
        android:textSize="18sp"
        android:text="@string/text_default_artist_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/songDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintRight_toRightOf="parent"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_song_detail_description"/>

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/slider"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:ems="3"
        android:text="@string/text_test_audio_time"
        android:gravity="start"/>

    <TextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/slider"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        android:ems="3"
        android:text="@string/text_test_audio_time"
        android:gravity="end"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/currentTime"
        app:layout_constraintRight_toLeftOf="@id/totalTime"
        app:layout_constraintTop_toBottomOf="@id/songDetail"
        android:contentDescription="@string/slider_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pausePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/slider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_player_controller_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/jumpForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toTopOf="@id/pausePlay"
        app:layout_constraintLeft_toRightOf="@id/pausePlay"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_player_controller_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/jumpBackward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toTopOf="@id/pausePlay"
        app:layout_constraintRight_toLeftOf="@id/pausePlay"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_player_controller_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toTopOf="@id/pausePlay"
        app:layout_constraintLeft_toRightOf="@id/jumpForward"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_player_controller_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/previousSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintTop_toTopOf="@id/pausePlay"
        app:layout_constraintRight_toLeftOf="@id/jumpBackward"
        app:icon="@drawable/icon_info_24"
        android:contentDescription="@string/button_player_controller_description"/>


</androidx.constraintlayout.widget.ConstraintLayout>